--- a/style.css
+++ b/style.css
@@ -1,3 +1,53 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
 
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 50px auto;
+  height: 1200px;
+  width: 700px;
+}
+.container .display {
+  width: 100%;
+  height: 180px;
+  background: #000;
+  padding: 10px;
+  border: 5px solid #fff;
+  border-radius: 10px;
+}
+.container .row-1 {
+  margin: 0 auto;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.container .row-1 .btn {
+  width: 25%;
+  height: 100px;
+  cursor: pointer;
+  font-size: 24px;
+  color: #fff;
+  border: 5px solid #fff;
+  border-radius: 10px;
+}
+.container .row-1 .btn:hover {
+  filter: hue-rotate(40deg);
+}
+.container .btn-red {
+  background: red;
+}
+.container .btn-orange {
+  background: orange;
+}
+.container .btn-green {
+  background: green;
+}
+.container .btn-blue {
+  background: #3009e0;
+}
 
 /*# sourceMappingURL=style.css.map */
